# stingray-myo-plugin

./: .gitignore  CMakeLists.txt  FindMyo.cmake  README.md  if_myo.cpp  if_myo.h  myo_device.cpp  myo_device.h  myo_plugin.cpp  myo_plugin.h  myo_plugin.rc.in  plugin_interface.cpp  plugin_interface.h
